# ARMM-solver

./: CHANGELOG.md  CMakeLists.txt  README.md  bump_DP.cpp  bump_DP.py  data.h  data_solver.h  derivatives_handler.cpp  interpol.h  main.cpp  readparams_job.cpp  readparams_job.h  scanrange_solver.cpp  solver_mm.cpp  solver_mm.h  solver_mm.py  string_handler.cpp  test.prg  test.sh  version_solver.h
changed_code/: interpol.cpp  interpol.h  ksi2_fct_new.cpp  ksi2_fct_new.h  linfit.cpp  linfit.h  make_asymptotic_star_new.cpp  make_asymptotic_star_new.h  solver_mm_new.cpp  solver_mm_new.cpp.bak  solver_mm_new.h
docs/: Doxyfile
docs/html/: annotated.html  bump___d_p_8cpp.html  bump___d_p_8h.html  bump___d_p_8h_source.html  classes.html  configure__make__star_8cpp.html  configure__make__star_8h.html  configure__make__star_8h_source.html  data_8h.html  data_8h_source.html  data__solver_8h_source.html  derivatives__handler_8h.html  derivatives__handler_8h_source.html  do__solve_8cpp.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  index.html  interpol_8cpp.html  interpol_8h_source.html  linfit_8cpp.html  linfit_8h.html  linfit_8h_source.html  make__star_8cpp.html  md__2_users_2obenomar_2_documents_2_git_hub_2_a_r_m_m-solver_2_r_e_a_d_m_e.html  menudata.js  noise__models_8cpp.html  noise__models_8h.html  noise__models_8h_source.html  pages.html  readparams__job_8cpp.html  readparams__job_8h_source.html  solver__mm_8cpp.html  solver__mm_8h.html  solver__mm_8h_source.html  string__handler_8cpp.html  (+42 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  files_2.js  files_3.js  files_7.js  files_8.js  functions_4.js  functions_7.js  functions_9.js  functions_a.js  (+9 more)
unchanged_code/: CHANGELOG.md  CMakeLists.txt  README.md  bump_DP.cpp  data.h  linfit.cpp  solver_mm.cpp  solver_mm.h  version_solver.h
unit_test/interpol/: CMakeLists.txt  interpol_unittest.cpp
unit_test/ksi2_fct/: CMakeLists.txt  ksi2_fct_unittest.cpp
unit_test/linfit/: CMakeLists.txt  linfit_unittest.cpp
unit_test/make_star_asymptotic/: CMakeLists.txt  make_star_unittest.cpp
unit_test/make_star_asymptotic/config/: make_star_test.cfg
unit_test/make_star_asymptotic/debug_files/: newcode_debug.out  oldcode_debug.out
unit_test/solve_mm_asymptotic_O2p/: CMakeLists.txt  solver_O2_unittest.cpp  solver_mm_new.cpp  solver_mm_new.h
validated_changes/: bump_DP.cpp  bump_DP.h  linfit.h
